// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hookScript should match snapshot (OS X/Linux) 1`] = `
"#!/bin/sh
# husky
# v1.0.0-rc.8 darwin

HOOK_NAME=\`basename \\"$0\\"\`
if [ -f node_modules/husky/lib/runner/bin ]; then
  node_modules/run-node/run-node node_modules/husky/lib/runner/bin $HOOK_NAME \\"$*\\"
else
  echo \\"Can't find husky, skipping $HOOK_NAME hook\\"
  echo \\"You can reinstall it using 'npm install husky --save-dev' or delete this hook\\"
fi
"
`;

exports[`hookScript should match snapshot (Windows) 1`] = `
"#!/bin/sh
# husky
# v1.0.0-rc.8 win32

HOOK_NAME=\`basename \\"$0\\"\`
if [ -f node_modules/husky/lib/runner/bin ]; then
  node node_modules/husky/lib/runner/bin $HOOK_NAME \\"$*\\"
else
  echo \\"Can't find husky, skipping $HOOK_NAME hook\\"
  echo \\"You can reinstall it using 'npm install husky --save-dev' or delete this hook\\"
fi
"
`;
